Pipeline (CSS + HTML): Make sure the text wrap aligns properly.

--- a/src/scss/ia/_pipeline.scss
+++ b/src/scss/ia/_pipeline.scss
@@ -89,7 +89,11 @@
 	}
 
         .item-name { 
-	    max-width: 80%; 
+	    & > a {
+		display: inline-block;
+		/* Text should wrap if it's reached N% in the item. */
+		max-width: 65%; 
+	    }
 	    
 	    /* Display the type of repo */
 	    &:before {
@@ -97,7 +101,8 @@
 		color: $grey;
 		content: "N";
 		font-weight: 500;
-		padding: 0 0.3em 0 0.2em;
+		padding: 0 0.5em 0 0.2em;
+		float: left;
 	    }
 
 	    /* Change content to match the repo. */
